Layout 개선을 위한 기본 Sidebar 구성

--- a/src/App.css
+++ b/src/App.css
@@ -2,5 +2,13 @@ body {
     background-color: white;
     color: black;
     margin: 10px;
-    font-family: Arial; 
+    font-family: Arial;     
+}
+.App{
+    display: flex;
+}
+
+.Content{
+    display: block;
+    margin: 10px;
 }
