--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -4,9 +4,9 @@
     flex-direction: column;
     border-right: 1px solid;
     border-radius: 0;
-    border-color: black(8, 8, 8, 0.693);
+    border-color: rgba(64, 194, 133, 0.693);
     background-color: rgb(255, 255, 255);
-    transition: 0.8s ease;    
+    transition: 0.8s ease; 
 }
 
 .toggle-menu {
