Sidebar 애니메이션 수정

--- a/src/App.css
+++ b/src/App.css
@@ -5,11 +5,11 @@ body {
     font-family: Arial;     
 }
 .App{
-    display: flex;
+    display: flex;    
 }
 
 .Content{
     display: block;
     margin: 10px;
-    width :90%;
+    /*min-width :670px;*/
 }
