--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -1,5 +1,6 @@
 .Sidebar{    
     height: 100% !important;
+    min-width: 150px !important;
     display: flex;
     flex-direction: column;
     border-right: 1px solid;
@@ -13,7 +14,7 @@
     height: 50px;
     border-top-right-radius: 10rem;
     border-bottom-right-radius: 9rem;
-    width: 10px;
+    width: 10px;    
     position: absolute;
     outline: none;
     z-index: 1;
