--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,38 @@
-body {
-    background-color: white;
-    color: black;
-    
-    font-family: Arial;     
-}
-.App{
-    display: flex;    
-}
 
+.App{
+    width:960px;
+    height:600px;
+    margin-left:auto;
+    margin-right:auto;
+}
+.Header{    
+    padding: 20px;
+    margin-left :10px;
+    margin-bottom: 20px;
+    border: 1px solid #bcbcbc;
+}
 .Content{
-    display: block;
-    margin: 10px;
-    /*min-width :670px;*/
+    width: 450px;
+    padding: 20px;
+    margin-bottom: 20px;
+    float: left;
+    border: 1px solid #bcbcbc;
+}
+.Sidebar-left{
+    width: 160px;
+    padding: 20px;
+    margin-left:10px;
+    margin-right: 20px;
+    margin-bottom: 20px;
+    float: left;
+    border: 1px solid #bcbcbc;
+}
+.Sidebar-right {
+    width:160px;
+    padding:20px;    
+    margin-bottom:20px;
+    margin-right:10px;
+    float : right;
+    border : 1px solid #bcbcbc;    
+    
 }
