--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -8,6 +8,7 @@
     border-color: rgba(64, 194, 133, 0.693);
     background-color: rgb(255, 255, 255);
     transition: 0.8s ease; 
+    margin-bottom :20px;
 }
 
 .toggle-menu {
