--- a/src/App.css
+++ b/src/App.css
@@ -5,21 +5,22 @@
     margin-left:auto;
     margin-right:auto;
 }
-.Header{    
+.Header{
+    text-align: center;    
     padding: 20px;
     margin-left :10px;
     margin-bottom: 20px;
     border: 1px solid #bcbcbc;
 }
 .Content{
-    width: 450px;
+    width: 450px;    
     padding: 20px;
     margin-bottom: 20px;
     float: left;
     border: 1px solid #bcbcbc;
 }
 .Sidebar-left{
-    width: 160px;
+    width: 160px;    
     padding: 20px;
     margin-left:10px;
     margin-right: 20px;
