--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,27 @@
 
 .App{
-    width:960px;
-    height:600px;
+    width:1105px;   
+    max-height:800px;
     margin-left:auto;
     margin-right:auto;
+    background-color: whitesmoke;
+
 }
 .Header{
     text-align: center;    
-    padding: 20px;
-    margin-left :10px;
-    margin-bottom: 20px;
-    border: 1px solid #bcbcbc;
+    padding: 20px;        
+    border: 3px solid #bcbcbc;
+    background-color: lightgrey;    
 }
 .Content{
-    width: 450px;    
+    width :600px;
     padding: 20px;
     min-height: 400px;
-    margin-bottom: 20px;
+    margin-bottom: none;
     float: left;
-    border: 1px solid #bcbcbc;
+    border: 2px solid #bcbcbc;    
+    border-top:none;
+    background-color: white;
 }
 .Sidebar-left{
     width: 160px; 
@@ -26,24 +29,31 @@
     padding: 20px;
     margin-left: 10px;
     margin-right: 20px;
-    margin-bottom: 20px;
+    margin-top : 20px;
+    margin-bottom: none;
     float: left;
-    border: 1px solid #bcbcbc;
+    border: 2px solid #bcbcbc;
     border-bottom:none;
+    background-color: white;
 }
 .Sidebar-right {
     width:160px;
-    min-height: 400px;
-    padding:20px;    
-    margin-bottom:20px;
+    min-height: 400px;   
+    padding: 20px;
+    margin-left: 10px;
+    margin-right: 20px;
+    margin-top : 20px;
+    margin-bottom: none;
     margin-right:10px;
     float : right;
-    border : 1px solid #bcbcbc;
-    border-bottom:none;    
+    border : 2px solid #bcbcbc;
+    border-bottom:none;
+    background-color: white;    
     
 }
 .footer{
-    clear: both;    
-    border-top : 1px solid  #bcbcbc;    
+    clear: both;        
+    border-top : 2px solid  #bcbcbc;    
     padding :20px;
+    background-color: white;
 }
