data 소폭 수정및 Button css 추가

--- a/src/components/component.css
+++ b/src/components/component.css
@@ -9,3 +9,28 @@
     font-size:medium;
     
 }
+.controlButton {
+
+    width:100px;
+
+    background-color: #f8585b;
+
+    border: none;
+
+    color:#fff;
+
+    padding: 15px 0;
+
+    text-align: center;
+
+    text-decoration: none;
+
+    display: inline-block;
+
+    font-size: 15px;
+
+    margin: 4px;
+
+    cursor: pointer;
+
+}
